Add fleet to abouts page

--- a/_includes/team.html
+++ b/_includes/team.html
@@ -28,7 +28,7 @@
         <h2 class="section-heading text-uppercase">{{ site.data.team[site.locale].extra_info.title }}</h2>
       </div>
     </div>
-    <div class="row d-flex justify-content-center">
+    <div class="row d-flex justify-content-center extra-info-text">
       {{ site.data.team[site.locale].extra_info.text | markdownify }}
     </div>
   </div>
