--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -15,7 +15,8 @@
     text-transform: none;
     @include heading-font;
     li {
-      margin-right: 2rem;
+      margin-left: 1rem;
+      margin-right: 1rem;
     }
   }
 }
