--- a/_sass/layout/_team.scss
+++ b/_sass/layout/_team.scss
@@ -10,8 +10,8 @@
         margin-bottom: 50px;
         text-align: center;
         img {
-          width: 190px;
-          height: 190px;
+          width: 170px;
+          height: 170px;
           border: 7px solid fade-out($black, 0.9);
         }
         h4 {
@@ -24,5 +24,8 @@
         }
       }
     }
+  }
+  .extra-info-text {
+    text-align: center;
   }
 }
