--- a/assets/css/agency.scss
+++ b/assets/css/agency.scss
@@ -29,5 +29,6 @@ $contact-image: "{{ site.data.style.contact-image }}";
 @import "layout/timeline.scss";
 @import "layout/team.scss";
 @import "layout/calendar.scss";
+@import "layout/fleet.scss";
 @import "layout/contact.scss";
 @import "layout/footer.scss";
