Finish about page

--- a/_layouts/aboutpage.html
+++ b/_layouts/aboutpage.html
@@ -3,4 +3,6 @@ layout: default
 ---
 {% include navheadersmall.html %}
 
+{% include club.html %}
+{% include host.html %}
 {% include fleet.html %}
