--- a/_includes/fleet.html
+++ b/_includes/fleet.html
@@ -3,12 +3,12 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading text-uppercase">{{ site.data.fleet[site.locale].title }}</h2>
-        <h3 class="section-subheading text-muted">{{ site.data.fleet[site.locale].text }}</h3>
+        <h2 class="section-heading text-uppercase">{{ site.data.about[site.locale].fleet.title }}</h2>
+        <h3 class="section-subheading text-muted">{{ site.data.about[site.locale].fleet.text | markdownify }}</h3>
       </div>
     </div>
     <div class="row d-flex justify-content-center boats">
-      {% for boat in site.data.fleet[site.locale].boats %}
+      {% for boat in site.data.about[site.locale].fleet.boats %}
       <div class="col-6 col-md-3 boat-entry">
         <div class="boat-desc">
           <img class="mx-auto" src="assets/img/fleet/{{ boat.image }}" alt="">
