--- a/_includes/navheader.html
+++ b/_includes/navheader.html
@@ -15,11 +15,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
-        {% if site.locale and site.locale != "" and site.locale != nil %}
         {% for link in site.data.navigation[site.locale].nav %}
           <li class="nav-item">
             {%- if link.url -%}
-              <a class="nav-link js-scroll-trigger" href="{{ link.url }}">{{ link.title }}</a>
+              <a class="nav-link js-scroll-trigger" href="{{ link.url }}">{{ link.title }}{% if link.url contains 'http' %} <i class="fas fa-external-link-alt"></i>{% endif %}</a>
             {%- elsif link.section -%}
               <a class="nav-link js-scroll-trigger" href="#{{ link.section }}">{{ link.title }}</a>
             {%- else -%}
@@ -27,19 +26,6 @@
             {%- endif -%}
           </li>
         {% endfor %}
-        {% else %}
-        {% for link in site.data.navigation.nav %}
-        <li class="nav-item">
-          {%- if link.url -%}
-            <a class="nav-link js-scroll-trigger" href="{{ link.url }}">{{ link.title }}</a>
-          {%- elsif link.section -%}
-            <a class="nav-link js-scroll-trigger" href="#{{ link.section }}">{{ link.title }}</a>
-          {%- else -%}
-            <a class="nav-link js-scroll-trigger" href="#">{{ link.title }}</a>
-          {%- endif -%}
-        </li>
-        {% endfor %}
-        {% endif %}
         </ul>
       </div>
     </div>
@@ -47,7 +33,6 @@
   <!-- End Navigation -->
   
   <!-- Header -->
-  {% if site.locale and site.locale != "" and site.locale != nil %}
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
@@ -63,21 +48,4 @@
       </div>
     </div>
   </header>
-  {% else %}
-  <header class="masthead">
-    <div class="container">
-      <div class="intro-text">
-	  {%- if site.data.sitetext.header.title -%}
-        <div class="intro-lead-in">{{ site.data.sitetext.header.title | markdownify }}</div>
-	  {%- endif -%}
-	  {%- if site.data.sitetext.header.text -%}
-        <div class="intro-heading text-uppercase">{{ site.data.sitetext.header.text | markdownify }}</div>
-	  {%- endif -%}
-	  {%- if site.data.sitetext.header.button -%}
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="{{ site.data.sitetext.header.buttonlink }}">{{ site.data.sitetext.header.button }}</a>
-	  {%- endif -%}
-      </div>
-    </div>
-  </header>
-  {% endif %}
   <!-- End Header -->
