--- a/assets/css/agency.scss
+++ b/assets/css/agency.scss
@@ -30,5 +30,6 @@ $contact-image: "{{ site.data.style.contact-image }}";
 @import "layout/team.scss";
 @import "layout/calendar.scss";
 @import "layout/fleet.scss";
+@import "layout/host.scss";
 @import "layout/contact.scss";
 @import "layout/footer.scss";
