--- a/_includes/host.html
+++ b/_includes/host.html
@@ -1,5 +1,5 @@
 <!-- Host -->
-<section class="page-section" id="host">
+<section class="bg-light page-section" id="host">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
