--- a/_sass/components/_navbar.scss
+++ b/_sass/components/_navbar.scss
@@ -56,6 +56,7 @@
     .navbar-nav {
       .nav-item {
         .nav-link {
+          font-size: 80%;
           padding: 1.1em 0.7em !important;
         }
       }
@@ -67,6 +68,17 @@
       .navbar-brand {
         font-size: 1.25em;
         padding: 12px 0;
+      }
+    }
+  }
+}
+@media (min-width: 1200px) {
+  #mainNav {
+    .navbar-nav {
+      .nav-item {
+        .nav-link {
+          font-size: 90%;
+        }
       }
     }
   }
