Update front page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,8 +3,8 @@ layout: default
 ---
 {% include navheader.html %}
 
+{% include intro.html %}
 {% include services.html %}
-{% include portfolio_grid.html %}
-{% include about.html %}
-{% include clients.html %}
-{% include contact.html %}
+{% include teaching.html %}
+{% include insta.html %}
+{% include logo.html %}
