--- a/assets/css/agency.scss
+++ b/assets/css/agency.scss
@@ -12,7 +12,7 @@ $black: {{ site.data.style.black | default: "#000" }} !default;
 
 // Custom Images
 $header-image: "{{ site.data.style.header-image }}";
-$contact-image: "{{ site.data.style.contact-image }}";
+$bottom-image: "{{ site.data.style.contact-image }}";
 
 // Global CSS
 @import "base/page.scss";
@@ -25,11 +25,11 @@ $contact-image: "{{ site.data.style.contact-image }}";
 // Layout
 @import "layout/masthead.scss";
 @import "layout/services.scss";
-@import "layout/portfolio.scss";
+@import "layout/intro.scss";
 @import "layout/timeline.scss";
 @import "layout/team.scss";
 @import "layout/calendar.scss";
 @import "layout/fleet.scss";
 @import "layout/host.scss";
-@import "layout/contact.scss";
+@import "layout/logo.scss";
 @import "layout/footer.scss";
