Finish home page

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,7 +10,7 @@
         <img height="{{ site.logo.height | default: 52 }}" src="{{ site.logo.path }}"/>
       {%- endif -%}
       {%- if site.title -%}
-        {{ site.title }}
+        <span>{{ site.title }}</span>
       {%- endif -%}
     </a>
     <button
