--- a/assets/css/agency.scss
+++ b/assets/css/agency.scss
@@ -31,5 +31,6 @@ $bottom-image: "{{ site.data.style.contact-image }}";
 @import "layout/calendar.scss";
 @import "layout/fleet.scss";
 @import "layout/host.scss";
+@import "layout/teaching.scss";
 @import "layout/logo.scss";
 @import "layout/footer.scss";
