--- a/_includes/navheadersmall.html
+++ b/_includes/navheadersmall.html
@@ -6,7 +6,7 @@
             <img height="{{ site.logo.height | default: 52 }}" src="{{ site.logo.path }}"/>
           {%- endif -%}
           {%- if site.title -%}
-            {{ site.title }}
+            <span>{{ site.title }}</span>
           {%- endif -%}
       </a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
