--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,29 +1,29 @@
 <!-- Services -->
-  <section class="bg-light page-section" id="{{ site.data.sitetext[site.locale].services.section | default: "services" }}">
+  <section class="bg-light page-section" id="join">
     <div class="container">
-	
+
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">{{ site.data.sitetext[site.locale].services.title | default: "Services" }}</h2>
-          {% if site.data.sitetext[site.locale].services.text %}
-		  <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].services.text }}</h3>
-		  {% endif %}
+          <h2 class="section-heading text-uppercase">{{ site.data.sitetext[site.locale].join.title | default: "Services" }}</h2>
+          {% if site.data.sitetext[site.locale].join.text %}
+          <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].join.text | markdownify }}</h3>
+          {% endif %}
         </div>
       </div>
-	  
+
       <div class="row text-center">
-	  {% for service in site.data.sitetext[site.locale].services.list %}
+      {% for item in site.data.sitetext[site.locale].join.list %}
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="{{ service.icon | default: "fas fa-shopping-cart" }} fa-stack-1x fa-inverse"></i>
+            <i class="{{ item.icon | default: "fas fa-shopping-cart" }} fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">{{ service.title | markdownify }}</h4>
-          {% if service.desc %}<div class="text-muted">{{ service.desc | markdownify }}</div>{% endif %}
+          <h4 class="item-heading">{{ item.title | markdownify }}</h4>
+          {% if item.desc %}<div class="text-muted">{{ item.desc | markdownify }}</div>{% endif %}
         </div>
-	  {% endfor %}
+      {% endfor %}
       </div>
-	  
+
     </div>
   </section>
 <!-- End Services -->
