--- a/_includes/teaching.html
+++ b/_includes/teaching.html
@@ -7,9 +7,16 @@
         <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].teaching.text | markdownify }}</h3>
       </div>
     </div>
-    <div class="row">
-      <div class="col-lg-12 mx-auto text-center">
-          Here comes the learn to sail content.
+    <div class="row d-flex justify-content-center">
+      <div class="col-10 col-md-8 col-lg-6">
+        <div class="entry picture">
+          <img src="assets/img/{{ site.data.sitetext[site.locale].teaching.img }}" alt="Location">
+        </div>
+      </div>
+      <div class="col-12 col-lg-6 bg-light-md">
+        <div class="entry text-muted content">
+            {{ site.data.sitetext[site.locale].teaching.content | markdownify }}
+        </div>
       </div>
     </div>
   </div>
