--- a/_sass/layout/_racing.scss
+++ b/_sass/layout/_racing.scss
@@ -23,6 +23,7 @@
     height: 300px;
     object-fit: cover;
     border-radius: 20px;
+    border: 7px solid #e9ecef;
   }
 }
 
@@ -46,6 +47,7 @@
     height: 300px;
     object-fit: cover;
     border-radius: 20px;
+    border: 7px solid #e9ecef;
   }
 }
 
