Refactor services -> join

--- a/assets/css/agency.scss
+++ b/assets/css/agency.scss
@@ -24,7 +24,7 @@ $bottom-image: "{{ site.data.style.contact-image }}";
 
 // Layout
 @import "layout/masthead.scss";
-@import "layout/services.scss";
+@import "layout/join.scss";
 @import "layout/intro.scss";
 @import "layout/timeline.scss";
 @import "layout/team.scss";
