--- a/_includes/join.html
+++ b/_includes/join.html
@@ -1,10 +1,10 @@
-<!-- Services -->
+<!-- Join -->
   <section class="bg-light page-section" id="join">
     <div class="container">
 
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">{{ site.data.sitetext[site.locale].join.title | default: "Services" }}</h2>
+          <h2 class="section-heading text-uppercase">{{ site.data.sitetext[site.locale].join.title | default: "Join" }}</h2>
           {% if site.data.sitetext[site.locale].join.text %}
           <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].join.text | markdownify }}</h3>
           {% endif %}
@@ -26,4 +26,4 @@
 
     </div>
   </section>
-<!-- End Services -->
+<!-- End Join -->
