--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 {% include navheader.html %}
 
 {% include intro.html %}
-{% include services.html %}
+{% include join.html %}
 {% include teaching.html %}
 {% include insta.html %}
 {% include logo.html %}
