--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,15 +4,14 @@
 
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">{{ site.data.sitetext[site.locale].contact.title | default: "Contact" }}</h2>
-          {% if site.data.sitetext[site.locale].contact.text %}
-          <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].contact.text | markdownify }}</h3>
+          {% if site.data.contact[site.locale].contact.text %}
+          <h3 class="section-subheading text-muted">{{ site.data.contact[site.locale].contact.text | markdownify }}</h3>
           {% endif %}
         </div>
       </div>
 
       <div class="row text-center">
-      {% for item in site.data.sitetext[site.locale].contact.list %}
+      {% for item in site.data.contact[site.locale].contact.list %}
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
