--- a/_includes/navheadersmall.html
+++ b/_includes/navheadersmall.html
@@ -36,7 +36,7 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text-small">
-        <div class="intro-heading text-uppercase">{{ page.title | markdownify }}</div>
+        <div class="intro-heading">{{ page.title | markdownify }}</div>
       </div>
     </div>
   </header>
