--- a/_sass/layout/_team.scss
+++ b/_sass/layout/_team.scss
@@ -13,6 +13,7 @@
           width: 170px;
           height: 170px;
           border: 7px solid fade-out($black, 0.9);
+          object-fit: cover;
         }
         h4 {
           margin-top: 25px;
