--- a/_includes/gtopen.html
+++ b/_includes/gtopen.html
@@ -3,15 +3,15 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading">{{ site.data.gtopen[site.locale].gtopen.title }}</h2>
+        <h2 class="section-heading">{{ site.data.gtopen[site.locale].gtopen[page.edition].title }}</h2>
       </div>
     </div>
     <div class="row d-flex justify-content-center">
       <div class="col-12 col-md-6">
-        <img src="assets/img/gtopen/{{ site.data.gtopen[site.locale].gtopen.img }}" alt="Location">
+        <img src="assets/img/gtopen/{{ site.data.gtopen[site.locale].gtopen[page.edition].img }}" alt="Location">
       </div>
       <div class="col-12 col-md-6">
-        <div class="section-subheading text-muted">{{ site.data.gtopen[site.locale].gtopen.text | markdownify }}</div>
+        <div class="section-subheading text-muted">{{ site.data.gtopen[site.locale].gtopen[page.edition].text | markdownify }}</div>
       </div>
     </div>
   </div>
